--- a/MKXK/mkxkFS.fsproj
+++ b/MKXK/mkxkFS.fsproj
@@ -14,4 +14,10 @@
     <Compile Include="src/FnGenerator.fs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Avalonia.Desktop" Version="11.0.0" />
+    <PackageReference Include="Avalonia.FuncUI" Version="1.0.0" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0" />
+  </ItemGroup>
+
 </Project>
