--- a/src/Renderer/Renderer.fsproj
+++ b/src/Renderer/Renderer.fsproj
@@ -1,13 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <OutputType>library</OutputType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="src/Colors.fs" />
+    <Compile Include="src/skchartcontrols.fs" />
     <Compile Include="src/Views.fs" />
     <Compile Include="src/Renderer.fs" />
   </ItemGroup>
@@ -23,8 +24,7 @@
     <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\SKCharts\SKCharts\SKCharts.csproj" />
-    <ProjectReference Include="..\..\..\src\SKCharts\SKCharts.Avalonia\src\SKCharts.Avalonia.csproj" />
+    <ProjectReference Include="..\SKCharts\SKCharts.fsproj" />
     <ProjectReference Include="..\Notation\Notation.fsproj" />
     <ProjectReference Include="..\MKXK\mkxkFS.fsproj" />
   </ItemGroup>
