further SKCharts-dev

--- a/src/SKCharts/SKCharts.fsproj
+++ b/src/SKCharts/SKCharts.fsproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <Compile Include="src/models.fs" />
+    <Compile Include="src/colormaps.fs" />
     <Compile Include="src/skcharts.fs" />
   </ItemGroup>
   
