--- a/src/Renderer/Renderer.fsproj
+++ b/src/Renderer/Renderer.fsproj
@@ -2,26 +2,24 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <OutputType>library</OutputType>
+    <OutputType>Exe</OutputType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="src/Colors.fs" />
     <Compile Include="src/skchartcontrols.fs" />
+    <Compile Include="src/models.fs" />
     <Compile Include="src/Views.fs" />
     <Compile Include="src/Renderer.fs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.6" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.6" />
-    <PackageReference Include="Avalonia.FuncUI" Version="1.1.0" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.6" />
-    <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
+    <PackageReference Include="Avalonia" Version="11.2.3" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.3" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
+    <PackageReference Include="Avalonia.FuncUI" Version="1.5.1" />    
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SKCharts\SKCharts.fsproj" />
